[tool.poetry]
name = "td"
version = "2.0.0"
description = "No dependencyОтсуNo dependency minimalistic cli todo app"
authors = ["imflop <imflop@gmail.com>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
mypy = "^0.982"
flake8 = "^5.0.4"
pylint = "^2.15.4"
isort = "^5.10.1"
ipython = "^8.5.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
